monitoring/grafana/k8s/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  labels:
    app: grafana-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-pod
  template:
    metadata:
      labels:
        app: grafana-pod
    spec:
      containers:
        - name: grafana-container  # default login: admin / admin
          image: grafana/grafana:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
spec:
  type: ClusterIP
  selector:
    app: grafana-pod
  ports:
    - port: 3000
      targetPort: 3000
